<resources>
    <string name="app_name">Wave</string>
    <string name="your_email">Enter your e-mail:</string>
    <string name="your_password">Enter your password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="registration_title">Registration</string>
    <string name="test_email_com">Test@gmail.com</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="sing_up">Sing up</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="type_your_message">Type your message:</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="join_now">Join Now</string>
    <string name="welcome">Welcome !</string>
    <string name="let_s_start">Let`s start!</string>
    <string name="account_login">Account login</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_age">Enter your age</string>
</resources>