<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    tools:context=".ui.start.StartActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        style="@style/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_wave"
        app:layout_constraintEnd_toEndOf="@+id/textViewWelcome"
        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <TextView
        android:id="@+id/textWave"
        style="@style/wave"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textStart"
        style="@style/lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/let_s_start"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/joinViewBtn"
        style="@style/card_view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_wave"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_now" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/joinViewBtn"
        app:layout_constraintEnd_toEndOf="@+id/joinViewBtn"
        app:layout_constraintStart_toStartOf="@+id/joinViewBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#5E5D73"
            android:textSize="21sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="21sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>